--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,7 @@
     <img src="img/logo.png" width="300px">
     <p>
       Artificial Memory(AM) Creative studio based in Seoul, was founded in 2020.
-      <br>We offer design and communication consultancy for clients from all fields of interest to
-      <br>create original works within the scope of art, brand, and design.
+      <br>We offer design and communication consultancy for clients from all fields of interest to create original works within the scope of art, brand, and design.
     </p>
   <br>
   <br>
