--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
         width: 160px;
         padding: auto;
         margin-right: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 50px;
         float: left;
         border: 0px solid #000000;
       }
@@ -31,14 +31,14 @@
         width: 180px;
         padding: auto;
         margin-right: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 50px;
         float: left;
         border: 0px solid #000000;
       }
       #body_column3 {
         width: 180px;
         padding: auto;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
         float: left;
         border: 0px solid #000000;
       }
@@ -53,11 +53,23 @@
         padding: auto;
         border: 0px solid #000000;
       }
-      @media ( max-width: 480px ) {
+      @media ( max-width: 690px ) {
       #body_Container {
         width: auto;
       }
       #body_head {
+        float: none;
+        width: auto;
+      }
+      #body_column1 {
+        float: none;
+        width: auto;
+      }
+      #body_column2 {
+        float: none;
+        width: auto;
+      }
+      #body_column3 {
         float: none;
         width: auto;
       }
