--- a/web/index.html
+++ b/web/index.html
@@ -14,10 +14,16 @@
         margin-right: auto;
         border: 0px solid #000000;
       }
+      #body_top {
+        width: 700px;
+        padding: auto;
+        margin-bottom: 50px;
+        border: 0px solid #000000;
+      }
       #body_head {
         width: 700px;
         padding: auto;
-        margin-bottom: 100px;
+        margin-bottom: 70px;
         border: 0px solid #000000;
       }
       #body_column1 {
@@ -58,6 +64,10 @@
       #body_Container {
         width: auto;
       }
+      #body_top {
+        float: none;
+        width: auto;
+      }
       #body_head {
         float: none;
         width: auto;
@@ -87,12 +97,14 @@
   </head>
   <body>
     <div id="body_Container">
+      <div id="body_top">
+        <img src="img/logo.png" width="350px">
+      </div>
       <div id="body_head">
-        <img src="img/logo.png" width="300px">
-        <br>
+        <img src="img/businesscard.gif" width="100%">
         <p>
-          Artificial Memory(AM) Creative studio based in Seoul, was founded in 2020.
-          <br>We offer design and communication consultancy for clients from all fields of interest to create original works within the scope of art, brand, and design.
+          Artificial Memory(AM) Creative studio based in Seoul, was founded in 2020.<br>
+          We offer design and communication consultancy for clients from all fields of interest to create original works within the scope of art, brand, and design.
         </p>
       </div>
         <div id="body_column1">
