--- a/web/index.html
+++ b/web/index.html
@@ -17,20 +17,20 @@
       #body_top {
         width: 700px;
         padding: auto;
-        margin-bottom: 50px;
+        margin-bottom: 70px;
         border: 0px solid #000000;
       }
       #body_head {
         width: 700px;
         padding: auto;
-        margin-bottom: 70px;
+        margin-bottom: 100px;
         border: 0px solid #000000;
       }
       #body_column1 {
         width: 160px;
         padding: auto;
         margin-right: 30px;
-        margin-bottom: 50px;
+        margin-bottom: 70px;
         float: left;
         border: 0px solid #000000;
       }
@@ -38,14 +38,14 @@
         width: 180px;
         padding: auto;
         margin-right: 30px;
-        margin-bottom: 50px;
+        margin-bottom: 70px;
         float: left;
         border: 0px solid #000000;
       }
       #body_column3 {
         width: 180px;
         padding: auto;
-        margin-bottom: 50px;
+        margin-bottom: 100px;
         float: left;
         border: 0px solid #000000;
       }
@@ -98,7 +98,7 @@
   <body>
     <div id="body_Container">
       <div id="body_top">
-        <img src="img/logo.png" width="350px">
+        <img src="img/logo.png" width="50%">
       </div>
       <div id="body_head">
         <img src="img/businesscard.gif" width="100%">
