--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
       table {width: 550px;}
-      body {font-family: 'Roboto', sans-serif; font-size: 120%; line-height: 1.5}
+      body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
       p.a {font-family: 'Roboto', sans-serif; font-weight: 700; line-height: 1}
       #body_Container {
         width: 1920px;
