--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,8 @@
     <title>Artificial Momory</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
-      table {width: 550px;}
       body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
-      p.a {font-family: 'Roboto', sans-serif; font-weight: 700; line-height: 1}
+      .a {font-weight: 700; line-height: 1}
       #body_Container {
         width: 1920px;
         padding: 30px;
@@ -15,9 +14,9 @@
         border: 0px solid #000000;
       }
       #body_top {
-        width: 700px;
+        width: 300px;
         padding: auto;
-        margin-bottom: 70px;
+        margin-bottom: 40px;
         border: 0px solid #000000;
       }
       #body_head {
@@ -61,12 +60,14 @@
         border: 0px solid #000000;
       }
       @media ( max-width: 1300px ) {
+      body {font-family: 'Roboto', sans-serif; font-size: 18pt; line-height: 1.5}
       #body_Container {
         width: auto;
       }
       #body_top {
         float: none;
-        width: auto;
+        width: 70%;
+        margin-bottom: 100px;
       }
       #body_head {
         float: none;
@@ -98,7 +99,7 @@
   <body>
     <div id="body_Container">
       <div id="body_top">
-        <img src="img/logo.png" width="50%">
+        <img src="img/logo.png" width="100%">
       </div>
       <div id="body_head">
         <img src="img/businesscard.gif" width="100%">
