--- a/web/index.html
+++ b/web/index.html
@@ -60,14 +60,14 @@
         border: 0px solid #000000;
       }
       @media ( max-width: 1300px ) {
-      body {font-family: 'Roboto', sans-serif; font-size: 18pt; line-height: 1.5}
+      body {font-family: 'Roboto', sans-serif; font-size: 1rem; line-height: 1.5}
       #body_Container {
         width: auto;
       }
       #body_top {
         float: none;
-        width: 70%;
-        margin-bottom: 100px;
+        width: 75%;
+        margin-bottom: 80px;
       }
       #body_head {
         float: none;
