--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
         border: 0px solid #000000;
       }
       @media ( max-width: 1300px ) {
-      body {font-size: 3em; line-height: 1.5}
+      body {font-size: 10px; line-height: 1.5}
       #body_Container {
         width: auto;
       }
