--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
       body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
-      .a {font-weight: 400; line-height: 1}
+      .a {font-weight: 500; line-height: 1}
       #body_Container {
         width: 1920px;
         padding: 30px;
@@ -60,7 +60,7 @@
         border: 0px solid #000000;
       }
       @media ( max-width: 1300px ) {
-      body {font-size: 10px; line-height: 1.5}
+      body {font-size: 2rem; line-height: 1.5}
       #body_Container {
         width: auto;
       }
