--- a/web/index.html
+++ b/web/index.html
@@ -67,6 +67,7 @@
       #body_top {
         float: none;
         width: 100%;
+        padding-top: 60px;        
         margin-bottom: 80px;
       }
       #body_head {
