--- a/web/index.html
+++ b/web/index.html
@@ -118,7 +118,6 @@
           Art Direction <br>
           Graphic Design <br>
           Type Design <br>
-          Space <br>
         </p>
       </div>
         <div id="body_column2">
@@ -128,8 +127,8 @@
         <p>
           Brand Strategy <br>
           Identity Deisgn <br>
+          Guideline <br>
           Experience Design <br>
-          Brand Guide line <br>
         </p>
       </div>
         <div id="body_column3">
@@ -137,7 +136,6 @@
           Production <br>
         </p>
         <p>
-          Product Design <br>
           Editorial Design <br>
           Packaging <br>
           2D/3D Artwork <br>
