--- a/web/index.html
+++ b/web/index.html
@@ -144,7 +144,7 @@
         </p>
       </div>
       <div id="body_text">
-        Web Page Progress :
+        Web Page Progress 🚧
         <progress value="3" max="100" draggable="auto"></progress><br>
       </div>
     </body>
