--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
     <style>
       body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
       .a {font-weight: 500; line-height: 1}
+      ul,li {margin:0;padding:0;list-style:none;}
+      a {color:#000;text-decoration:none;}
       #body_Container {
         width: 1920px;
         padding: 30px;
