--- a/web/index.html
+++ b/web/index.html
@@ -107,8 +107,13 @@
       <div id="body_head">
         <img src="img/businesscard.gif" width="100%">
         <p>
-          Artificial Memory(AM) Creative studio based in Seoul, was founded in 2020.<br>
-          We offer design and communication consultancy for clients from all fields of interest to create original works within the scope of art, brand, and design.
+          Artificial Memory is a creative studio based in Seoul.<br>
+          We focus on media diversity and share experiences with people in various fields.
+          Through a contextual understanding of the situation, we produce tangible and intangible products that encompass business, art, and design.
+          <br>
+          아티피셜메모리는 서울을 기반으로하는 크리에이티브 스튜디오입니다.<br>
+          우리는 매체의 다양성에 중점을 두고 여러 분야의 사람들과 경험을 공유하며 프로젝트를 진행합니다.
+          상황에 대한 맥락의 이해를 통해 비즈니스, 예술, 디자인을 포괄하는 유,무형의 산출물을 생산해 냅니다.
         </p>
       </div>
         <div id="body_column1">
