--- a/web/index.html
+++ b/web/index.html
@@ -109,7 +109,7 @@
         <p>
           Artificial Memory is a creative studio based in Seoul.<br>
           We focus on media diversity and share experiences with people in various fields.
-          Through a contextual understanding of the situation, we produce tangible and intangible products that encompass business, art, and design.
+          Through a contextual understanding of the situation, we produce tangible and intangible products that encompass business, art, and design.<br>
           <br>
           아티피셜메모리는 서울을 기반으로하는 크리에이티브 스튜디오입니다.<br>
           우리는 매체의 다양성에 중점을 두고 여러 분야의 사람들과 경험을 공유하며 프로젝트를 진행합니다.
