--- a/web/index.html
+++ b/web/index.html
@@ -75,6 +75,7 @@
       #body_head {
         float: none;
         width: auto;
+        margin-bottom: 80px;
       }
       #body_column1 {
         float: none;
