--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Artificial Momory</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
       body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
       .a {font-weight: 500; line-height: 1}
+      .kr {font-family: 'Noto Sans KR', sans-serif;}
       ul,li {margin:0;padding:0;list-style:none;}
       a {color:#000;text-decoration:none;}
       #body_Container {
@@ -112,9 +114,9 @@
           We focus on media diversity and share experiences with people in various fields.
           Through a contextual understanding of the situation, we produce tangible and intangible products that encompass business, art, and design.<br>
           <br>
-          아티피셜메모리는 서울을 기반으로하는 크리에이티브 스튜디오입니다.<br>
+          <span class="kr">아티피셜메모리는 서울을 기반으로하는 크리에이티브 스튜디오입니다.<br>
           우리는 매체의 다양성에 중점을 두고 여러 분야의 사람들과 경험을 공유하며 프로젝트를 진행합니다.
-          상황에 대한 맥락의 이해를 통해 비즈니스, 예술, 디자인을 포괄하는 유,무형의 산출물을 생산해 냅니다.
+          상황에 대한 맥락의 이해를 통해 비즈니스, 예술, 디자인을 포괄하는 유,무형의 산출물을 생산해 냅니다.</span>
         </p>
       </div>
         <div id="body_column1">
