--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <style>
       body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
       .a {font-weight: 500; line-height: 1}
-      .kr {font-family: 'Noto Sans KR', sans-serif;}
+      .kr {font-family: 'Noto Sans KR', sans-serif; font-size: 13pt;}
       ul,li {margin:0;padding:0;list-style:none;}
       a {color:#000;text-decoration:none;}
       #body_Container {
