--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
       body {font-family: 'Roboto', sans-serif; font-size: 15pt; line-height: 1.5}
+      .kr {font-family: 'Noto Sans KR', sans-serif; font-size: 13pt; font-weight: 500}
       .a {font-weight: 500; line-height: 1}
-      .kr {font-family: 'Noto Sans KR', sans-serif; font-size: 14pt; font-weight: 400}
       ul,li {margin:0;padding:0;list-style:none;}
       a {color:#000;text-decoration:none;}
       #body_Container {
@@ -65,35 +65,40 @@
       }
       @media ( max-width: 1300px ) {
       body {font-size: 3rem; line-height: 1.3}
+      .kr {font-size: 1.8rem; line-height: 1.2}
       #body_Container {
         width: auto;
       }
       #body_top {
         float: none;
         width: 100%;
-        padding-top: 60px;        
+        padding-top: 60px;
         margin-bottom: 80px;
       }
       #body_head {
         float: none;
         width: auto;
-        margin-bottom: 80px;
+        margin-bottom: 170px;
       }
       #body_column1 {
         float: none;
         width: auto;
+        margin-bottom: 100px;
       }
       #body_column2 {
         float: none;
         width: auto;
+        margin-bottom: 100px;
       }
       #body_column3 {
         float: none;
         width: auto;
+        margin-bottom: 170px;
       }
       #body_text {
         float: none;
         width: auto;
+        margin-bottom: 50px;
       }
       #body_footer {
         float: none;
