--- a/web/index.html
+++ b/web/index.html
@@ -168,7 +168,7 @@
       <div id="body_footer">
       	e-mail : info@am-studio.kr<br>
   			adress : 1F, 24, Hoenamu-ro 26-gil, Yongsan-gu, Seoul, KR<br>
-  			instagram : <a href="https://www.instagram.com/am.artificialmemory/" target="_blank">@aa.artificialmemory</a><br>
+  			instagram : <a href="https://www.instagram.com/am.artificialmemory/" target="_blank">@am.artificialmemory</a><br>
         <br>
         ©2020 Artificial Memory.
     </div>
